--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,6 @@
 name = "interpreter"
 version = "0.1.0"
 edition = "2021"
-
 [dependencies]
+clap = { version = "4.0", features = ["derive", "cargo"] }
+
